--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
       "use": "@vercel/python"
     }
   ],
+  "env": {
+    "PYTHON_VERSION": "3.12"
+  },
   "routes": [
     {
       "src": "/(.*)",
