--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-﻿pandas~=2.0.3
-boto3~=1.35.5
-fastapi~=0.115.0
-pydantic~=2.8.2
-statsmodels~=0.14.4
-numpy~=1.24.3
-python-dotenv~=1.0.1
+statsmodels
+fastapi
+pandas
+boto3
+python-dotenv
+pydantic
 uvicorn
+numpy==1.24.4
