--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 statsmodels
-fastapi
-pandas
-boto3
-python-dotenv
-pydantic
+﻿pandas~=2.0.3
+boto3~=1.35.5
+numpy~=1.24.3
+fastapi~=0.115.0
+pydantic~=2.8.2
+scikit-learn~=1.6.0
+python-dotenv~=1.0.1
 uvicorn
 openpyxl
-numpy==1.24.4
